--- a/indizio/templates/indizio/start.html
+++ b/indizio/templates/indizio/start.html
@@ -13,19 +13,18 @@
 {% endblock content1 %}
 
 {% block title2 %}
-	L'idea era quella di scrivere una storia
+	L'idea era quella di scrivere qualcosa per te.. Ma cosa?
 {% endblock %}
 
 {% block content2_title %}
-	Un'racconto. Vissuto da te, e che sceglierai tu come far dirigere.
+	Un'racconto! Un opera narrativa vissuta da te, in prima persona, che ti divertirai (forse..) a dirigere.
 {% endblock content2_title %}
 
 {% block content2 %}
-	Spero sia per te divertente almeno la metà di quanto mi sono divertito io a scriverla.
-	Chiedo venia per ripetizioni ed errori.. Ha richiesto più fatica del previsto! 
+	Chiedo venia per ripetizioni ed errori.. Ha richiesto più fatica del previsto, e mi sono preoccupato più del lato tecnico che di quello narrativo :\ <br /> 
 	Ma ora basta cincischiare, che la storia abbia inizio! 
 	<p>
-		<a href="/1/"> GO! </a>
+		<a href="/5/"> GO! </a>
 	</p>
 
 {% endblock content2 %}
