--- a/indizio/templates/indizio/fine.html
+++ b/indizio/templates/indizio/fine.html
@@ -6,10 +6,12 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
 <style>
 body,h1 {font-family: "Montserrat", sans-serif}
 img {margin-bottom: -7px}
 .w3-row-padding img {margin-bottom: 12px}
+.w3-tangerine { font-family: "Tangerine", serif; }
 </style>
 <body>
 
@@ -19,10 +21,7 @@ img {margin-bottom: -7px}
     <i class="fa fa-remove"></i>
   </a>
   <div class="w3-bar-block w3-center">
-    <a href="#" class="w3-bar-item w3-button w3-text-grey w3-hover-black">About</a>
-    <a href="#" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Photos</a>
-    <a href="#" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Shop</a>
-    <a href="#" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Contact</a>
+    <a href="/" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Torna all'inizio</a>
   </div>
 </nav>
 
@@ -32,45 +31,115 @@ img {margin-bottom: -7px}
 <!-- Header -->
 <div class="w3-opacity">
 <span class="w3-button w3-xxlarge w3-white w3-right" onclick="w3_open()"><i class="fa fa-bars"></i></span> 
+
 <div class="w3-clear"></div>
-<header class="w3-center w3-margin-bottom">
-  <h1><b>PHOTOLIO</b></h1>
-  <p><b>A template made by w3.css for photographers.</b></p>
-  <p class="w3-padding-16"><button class="w3-button w3-black" onclick="myFunction()">Toggle Grid Padding</button></p>
-</header>
+  <header class=" w3-margin-bottom">
+
+    <h1 class="w3-center">
+      <b>
+        Perché?
+      </b>
+    </h1>
+    
+    <p>
+      <b>
+        Dovevo essere sicuro che tu mi amassi quanto ti amo io, anche se non te lo dico mai. <br />
+
+<button onclick="showTextF('hidetext')" class="w3-button w3-block w3-black w3-left-align">
+      VM18 Content
+  </button>
+  <div id="hidetext" class="w3-hide w3-animate-zoom">
+    <div class="w3-container w3-red w3-padding"> 
+  
+  Dovevo dirti che anche se googlo arabe, teen, gym gurls, big boobs, milf, bianche, asian, e chi più ne ha, più ne metta.. Ti trovo di gran lunga più attraente di loro :)
+    </div>
+  </div>
+  
+  <script> function showTextF(id) {
+  var x = document.getElementById(id);
+    if (x.className.indexOf("w3-show") == -1) {
+        x.className += " w3-show";
+    } else { 
+        x.className = x.className.replace(" w3-show", "");
+    }
+} </script>
+
+Dovevo dirti che sei bella quando ti arrabbi ed è troppo divertente farti arrabbiare, quindi continuerò a farlo sempre. Non te la prendere. <br />
+Dovevo dirti che il tuo collo è troppo attraente, anche se ti dà fastidio. Ma forse è proprio questo il bello? <br />
+Dovevo dirti che sono più indeciso di Ceres coi suoi hobby, ma nonostante questo, tu sei una sicurezza.. è bello poter contare su di te. <br />
+Dovevo dirti che mi fai sentire un uomo, anche se sono ancora un ragazzino con qualche idea un po' cresciuta. <br />
+Dovevo dirti che ti amo tanto. <br />
+Ti amo quando mi accompagni nei miei hobby assurdi. <br />
+Ti amo quando ti arrabbi con me. <br />
+Ti amo quando mi richiami perchè sono un cazzaro, e quando stai con me lasciandomi cazzeggiare. <br />
+Fixed: Ti amo quando mi perdoni anche se il tuo regalo era più bello e homemade del mio. <br />
+Buon regalo di quinto anniversario. <br /><br />
+
+<div class="w3-container w3-right-align">
+Il regalo è il percorso, non l'oggetto. <br />
+Ti amo ancora <br />
+e ancora <br />
+e <br />
+per sempre <br />
+<br />
+<p class="w3-jumbo w3-tangerine">Daniele</p> </div>
+      </b>
+    </p>
+
+  </header>
 </div>
 
 <!-- Photo Grid -->
-<div class="w3-row" id="myGrid" style="margin-bottom:128px">
+{% load static %}
+<div class="w3-row-padding" id="myGrid" style="margin-bottom:128px">
   <div class="w3-third">
-    <img src="/w3images/rocks.jpg" style="width:100%">
-    <img src="/w3images/sound.jpg" style="width:100%">
-    <img src="/w3images/woods.jpg" style="width:100%">
-    <img src="/w3images/rock.jpg" style="width:100%">
-    <img src="/w3images/nature.jpg" style="width:100%">
-    <img src="/w3images/mist.jpg" style="width:100%">
+    <img src="{% static "indizio/img1.jpg" %}" 
+      style="width:100%"> 
+    <img src="{% static "indizio/img2.jpg" %}" 
+      style="width:100%">
+    <img src="{% static "indizio/img3.jpg" %}" 
+      style="width:100%">
+    <img src="{% static "indizio/img4.jpg" %}" 
+      style="width:100%"> 
+    <img src="{% static "indizio/img5.jpg" %}" 
+      style="width:100%">
+    <img src="{% static "indizio/img6.jpg" %}" 
+      style="width:100%">
   </div>
 
   <div class="w3-third">
-    <img src="/w3images/coffee.jpg" style="width:100%">
-    <img src="/w3images/bridge.jpg" style="width:100%">
-    <img src="/w3images/notebook.jpg" style="width:100%">
-    <img src="/w3images/london.jpg" style="width:100%">
-    <img src="/w3images/rocks.jpg" style="width:100%">
-    <img src="/w3images/avatar_g.jpg" style="width:100%">
+    <img src="{% static "indizio/img7.jpg" %}" 
+      style="width:100%"> 
+    <img src="{% static "indizio/img8.jpg" %}" 
+      style="width:100%">
+    <img src="{% static "indizio/img9.jpg" %}" 
+      style="width:100%">
+    <img src="{% static "indizio/img10.jpg" %}" 
+      style="width:100%"> 
+    <img src="{% static "indizio/img11.jpg" %}" 
+      style="width:100%">
+    <img src="{% static "indizio/img12.jpg" %}" 
+      style="width:100%">
   </div>
 
   <div class="w3-third">
-    <img src="/w3images/mist.jpg" style="width:100%">
-    <img src="/w3images/workbench.jpg" style="width:100%">
-    <img src="/w3images/gondol.jpg" style="width:100%">
-    <img src="/w3images/skies.jpg" style="width:100%">
-    <img src="/w3images/lights.jpg" style="width:100%">
-    <img src="/w3images/workshop.jpg" style="width:100%">
+    <img src="{% static "indizio/img13.jpg" %}" 
+      style="width:100%"> 
+    <img src="{% static "indizio/img14.jpg" %}" 
+      style="width:100%">
+    <img src="{% static "indizio/img15.jpg" %}" 
+      style="width:100%">
+    <img src="{% static "indizio/img16.jpg" %}" 
+      style="width:100%"> 
+    <img src="{% static "indizio/img17.jpg" %}" 
+      style="width:100%">
   </div>
 </div>
 
 <!-- End Page Content -->
+<div class="w3-center">
+  <p class="w3-padding-16"><button class="w3-button w3-black" onclick="functionGrid()">Toggle Grid Padding</button></p>
+</div>
 </div>
 
 <!-- Footer -->
@@ -86,7 +155,7 @@ img {margin-bottom: -7px}
  
 <script>
 // Toggle grid padding
-function myFunction() {
+function functionGrid() {
     var x = document.getElementById("myGrid");
     if (x.className === "w3-row") {
         x.className = "w3-row-padding";
