--- a/indizio/templates/indizio/fine.html
+++ b/indizio/templates/indizio/fine.html
@@ -45,35 +45,33 @@ img {margin-bottom: -7px}
       <b>
         Dovevo essere sicuro che tu mi amassi quanto ti amo io, anche se non te lo dico mai. <br />
 
-<button onclick="showTextF('hidetext')" class="w3-button w3-block w3-black w3-left-align">
+<button onclick="showTextF('hidetext')" class="w3-button  w3-black w3-left-align">
       VM18 Content
   </button>
-  <div id="hidetext" class="w3-hide w3-animate-zoom">
-    <div class="w3-container w3-red w3-padding"> 
+  <div id="hidetext" class="w3-hide w3-animate-zoom w3-red w3-padding"> 
   
   Dovevo dirti che anche se googlo arabe, teen, gym gurls, big boobs, milf, bianche, asian, e chi più ne ha, più ne metta.. Ti trovo di gran lunga più attraente di loro :)
-    </div>
   </div>
   
   <script> function showTextF(id) {
-  var x = document.getElementById(id);
+    var x = document.getElementById(id);
     if (x.className.indexOf("w3-show") == -1) {
         x.className += " w3-show";
     } else { 
         x.className = x.className.replace(" w3-show", "");
     }
-} </script>
+  } </script>
 
 Dovevo dirti che sei bella quando ti arrabbi ed è troppo divertente farti arrabbiare, quindi continuerò a farlo sempre. Non te la prendere. <br />
 Dovevo dirti che il tuo collo è troppo attraente, anche se ti dà fastidio. Ma forse è proprio questo il bello? <br />
 Dovevo dirti che sono più indeciso di Ceres coi suoi hobby, ma nonostante questo, tu sei una sicurezza.. è bello poter contare su di te. <br />
 Dovevo dirti che mi fai sentire un uomo, anche se sono ancora un ragazzino con qualche idea un po' cresciuta. <br />
 Dovevo dirti che ti amo tanto. <br />
-Ti amo quando mi accompagni nei miei hobby assurdi. <br />
+Ti amo quando mi accompagni nei miei viaggi assurdi. <br />
 Ti amo quando ti arrabbi con me. <br />
 Ti amo quando mi richiami perchè sono un cazzaro, e quando stai con me lasciandomi cazzeggiare. <br />
-Fixed: Ti amo quando mi perdoni anche se il tuo regalo era più bello e homemade del mio. <br />
-Buon regalo di quinto anniversario. <br /><br />
+Fixed: Ti amo quando mi perdoni anche se il tuo regalo era più bello e homemade del mio. <br /><br />
+Buon quinto anniversario <3 <br /><br />
 
 <div class="w3-container w3-right-align">
 Il regalo è il percorso, non l'oggetto. <br />
@@ -88,6 +86,8 @@ per sempre <br />
 
   </header>
 </div>
+
+<p> E ora.. Un po' di noi :) </p>
 
 <!-- Photo Grid -->
 {% load static %}
