--- a/indizio/templates/indizio/fine.html
+++ b/indizio/templates/indizio/fine.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title><3 Lot of Love <3</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -28,122 +28,143 @@ img {margin-bottom: -7px}
 <!-- !PAGE CONTENT! -->
 <div class="w3-content" style="max-width:1500px">
 
-<!-- Header -->
-<div class="w3-opacity">
-<span class="w3-button w3-xxlarge w3-white w3-right" onclick="w3_open()"><i class="fa fa-bars"></i></span> 
+  <!-- Header -->
+  <div class="w3-container w3-opacity">
+    <span class="w3-button w3-xxlarge w3-white w3-right" onclick="w3_open()"><i class="fa fa-bars"></i></span> 
+    <div class="w3-clear"></div>
 
-<div class="w3-clear"></div>
-  <header class=" w3-margin-bottom">
+    <header class=" w3-margin-bottom">
 
-    <h1 class="w3-center">
-      <b>
-        Perché?
-      </b>
-    </h1>
-    
-    <p>
-      <b>
-        Dovevo essere sicuro che tu mi amassi quanto ti amo io, anche se non te lo dico mai. <br />
+      <h1 class="w3-center">
+        <b>
+          Perché?
+        </b>
+      </h1>
+      
+      <p>
+        <!-- Apro row -->
+        <div class="w3-row">
+          <div class="w3-col w3-container" style="width:20%"></div>
+          <!-- Apro mid coloumn -->
+          <div class="w3-col w3-container" style="width:60%">
+          <h5>
+            Dovevo essere sicuro che tu mi amassi quanto ti amo io, anche se non te lo dico mai. 
+            E porca paletta, se hai avuto la pazienza di arrivare fin qui senza dire "Dani ma che è sta roba!?".. Dev'essere vero amore.<br />
 
-<button onclick="showTextF('hidetext')" class="w3-button  w3-black w3-left-align">
-      VM18 Content
-  </button>
-  <div id="hidetext" class="w3-hide w3-animate-zoom w3-red w3-padding"> 
-  
-  Dovevo dirti che anche se googlo arabe, teen, gym gurls, big boobs, milf, bianche, asian, e chi più ne ha, più ne metta.. Ti trovo di gran lunga più attraente di loro :)
+            <button onclick="showTextF('hidetext')" class="w3-button  w3-black w3-left-align">
+                VM18 Content
+            </button><br />
+            <div id="hidetext" class="w3-hide w3-animate-zoom w3-red w3-padding"> 
+              Dovevo dirti che anche se googlo arabe, teen, gym gurls, big boobs, milf, bianche, asian, e chi più ne ha, più ne metta.. Ti trovo di gran lunga più attraente di loro!
+            </div>
+
+            Dovevo dirti che sei bella quando ti arrabbi ed è troppo divertente farti arrabbiare, quindi continuerò a farlo sempre. Non te la prendere. <br />
+            Dovevo dirti che il tuo collo è troppo attraente, anche se ti dà fastidio. Ma forse è proprio questo il bello? <br />
+            Dovevo dirti che sono più indeciso di Ceres coi suoi hobby, ma nonostante questo, tu sei una sicurezza.. è bello poter contare su di te. <br />
+            Dovevo dirti che mi fai sentire un uomo, anche se sono ancora un ragazzino con qualche idea un po' cresciuta. <br />
+            Dovevo dirti che ti amo tanto. <br />
+            Ti amo quando mi accompagni nei miei viaggi assurdi. <br />
+            Ti amo quando ti arrabbi con me. <br />
+            Ti amo quando mi richiami perchè sono un cazzaro, e quando stai con me lasciandomi cazzeggiare. <br />
+            Fixed: Ti amo quando mi perdoni anche se il tuo regalo era più bello e homemade del mio. <br /><br />
+            Buon quinto anniversario <3 <br /><br />
+
+            <div class="w3-container w3-right-align">
+              Ti amo ancora <br />
+              e ancora <br />
+              e <br />
+              per sempre <br />
+              <br />
+              <h1 class="w3-jumbo w3-tangerine">Daniele</h1>
+            </div>
+
+            <p> 
+              E ora.. Un po' di noi! <br />
+              Tip: Prova a cliccare sulle foto :P
+            </p>
+
+          </h5>
+          <!-- Chiudo mid coloumn-->
+          </div>
+        <!-- Chiudo row -->
+        </div>
+      </p>
+
+    </header>
+    <!-- HEADER FINISH -->
+    </div>
+
+    <!-- Photo Grid -->
+    {% load static %}
+    <div class="w3-row-padding" id="myGrid" style="margin-bottom:128px">
+      <div class="w3-third">
+        <img src="{% static "indizio/img1.jpg" %}" 
+          style="width:100%; cursor:pointer" onclick="animatePhoto(this)"> 
+        <img src="{% static "indizio/img2.jpg" %}" 
+          style="width:100%; cursor:pointer" onclick="animatePhoto(this)">
+        <img src="{% static "indizio/img3.jpg" %}" 
+          style="width:100%; cursor:pointer" onclick="animatePhoto(this)">
+        <img src="{% static "indizio/img4.jpg" %}" 
+          style="width:100%; cursor:pointer" onclick="animatePhoto(this)"> 
+        <img src="{% static "indizio/img5.jpg" %}" 
+          style="width:100%; cursor:pointer" onclick="animatePhoto(this)">
+        <img src="{% static "indizio/img6.jpg" %}" 
+          style="width:100%; cursor:pointer" onclick="animatePhoto(this)">
+      </div>
+
+      <div class="w3-third">
+        <img src="{% static "indizio/img7.jpg" %}" 
+          style="width:100%; cursor:pointer" onclick="animatePhoto(this)"> 
+        <img src="{% static "indizio/img8.jpg" %}" 
+          style="width:100%; cursor:pointer" onclick="animatePhoto(this)">
+        <img src="{% static "indizio/img9.jpg" %}" 
+          style="width:100%; cursor:pointer" onclick="animatePhoto(this)">
+        <img src="{% static "indizio/img10.jpg" %}" 
+          style="width:100%; cursor:pointer" onclick="animatePhoto(this)"> 
+        <img src="{% static "indizio/img11.jpg" %}" 
+          style="width:100%; cursor:pointer" onclick="animatePhoto(this)">
+        <img src="{% static "indizio/img12.jpg" %}" 
+          style="width:100%; cursor:pointer" onclick="animatePhoto(this)">
+      </div>
+
+      <div class="w3-third">
+        <img src="{% static "indizio/img13.jpg" %}" 
+          style="width:100%; cursor:pointer" onclick="animatePhoto(this)"> 
+        <img src="{% static "indizio/img14.jpg" %}" 
+          style="width:100%; cursor:pointer" onclick="animatePhoto(this)">
+        <img src="{% static "indizio/img15.jpg" %}" 
+          style="width:100%; cursor:pointer" onclick="animatePhoto(this)">
+        <img src="{% static "indizio/img16.jpg" %}" 
+          style="width:100%; cursor:pointer" onclick="animatePhoto(this)"> 
+        <img src="{% static "indizio/img17.jpg" %}" 
+          style="width:100%; cursor:pointer" onclick="animatePhoto(this)">
+      </div>
+    </div>
+
+    <!-- Foto che compare davanti al click -->
+    <div id="modalShow" class="w3-modal" onclick="this.style.display='none'">
+      <span class="w3-button w3-hover-red w3-xlarge w3-display-topright"> &times; </span>
+      <div class="w3-modal-content w3-animate-zoom">
+        <img id="imgToShow" style="width:100%">
+      </div>
+    </div>
+
+    <!-- End Page Content -->
+    <div class="w3-center">
+      <p class="w3-padding-16"><button class="w3-button w3-black" onclick="functionGrid()">Toggle Grid Padding</button></p>
+    </div>
   </div>
-  
-  <script> function showTextF(id) {
-    var x = document.getElementById(id);
-    if (x.className.indexOf("w3-show") == -1) {
-        x.className += " w3-show";
-    } else { 
-        x.className = x.className.replace(" w3-show", "");
-    }
-  } </script>
-
-Dovevo dirti che sei bella quando ti arrabbi ed è troppo divertente farti arrabbiare, quindi continuerò a farlo sempre. Non te la prendere. <br />
-Dovevo dirti che il tuo collo è troppo attraente, anche se ti dà fastidio. Ma forse è proprio questo il bello? <br />
-Dovevo dirti che sono più indeciso di Ceres coi suoi hobby, ma nonostante questo, tu sei una sicurezza.. è bello poter contare su di te. <br />
-Dovevo dirti che mi fai sentire un uomo, anche se sono ancora un ragazzino con qualche idea un po' cresciuta. <br />
-Dovevo dirti che ti amo tanto. <br />
-Ti amo quando mi accompagni nei miei viaggi assurdi. <br />
-Ti amo quando ti arrabbi con me. <br />
-Ti amo quando mi richiami perchè sono un cazzaro, e quando stai con me lasciandomi cazzeggiare. <br />
-Fixed: Ti amo quando mi perdoni anche se il tuo regalo era più bello e homemade del mio. <br /><br />
-Buon quinto anniversario <3 <br /><br />
-
-<div class="w3-container w3-right-align">
-Il regalo è il percorso, non l'oggetto. <br />
-Ti amo ancora <br />
-e ancora <br />
-e <br />
-per sempre <br />
-<br />
-<p class="w3-jumbo w3-tangerine">Daniele</p> </div>
-      </b>
-    </p>
-
-  </header>
-</div>
-
-<p> E ora.. Un po' di noi :) </p>
-
-<!-- Photo Grid -->
-{% load static %}
-<div class="w3-row-padding" id="myGrid" style="margin-bottom:128px">
-  <div class="w3-third">
-    <img src="{% static "indizio/img1.jpg" %}" 
-      style="width:100%"> 
-    <img src="{% static "indizio/img2.jpg" %}" 
-      style="width:100%">
-    <img src="{% static "indizio/img3.jpg" %}" 
-      style="width:100%">
-    <img src="{% static "indizio/img4.jpg" %}" 
-      style="width:100%"> 
-    <img src="{% static "indizio/img5.jpg" %}" 
-      style="width:100%">
-    <img src="{% static "indizio/img6.jpg" %}" 
-      style="width:100%">
-  </div>
-
-  <div class="w3-third">
-    <img src="{% static "indizio/img7.jpg" %}" 
-      style="width:100%"> 
-    <img src="{% static "indizio/img8.jpg" %}" 
-      style="width:100%">
-    <img src="{% static "indizio/img9.jpg" %}" 
-      style="width:100%">
-    <img src="{% static "indizio/img10.jpg" %}" 
-      style="width:100%"> 
-    <img src="{% static "indizio/img11.jpg" %}" 
-      style="width:100%">
-    <img src="{% static "indizio/img12.jpg" %}" 
-      style="width:100%">
-  </div>
-
-  <div class="w3-third">
-    <img src="{% static "indizio/img13.jpg" %}" 
-      style="width:100%"> 
-    <img src="{% static "indizio/img14.jpg" %}" 
-      style="width:100%">
-    <img src="{% static "indizio/img15.jpg" %}" 
-      style="width:100%">
-    <img src="{% static "indizio/img16.jpg" %}" 
-      style="width:100%"> 
-    <img src="{% static "indizio/img17.jpg" %}" 
-      style="width:100%">
-  </div>
-</div>
-
-<!-- End Page Content -->
-<div class="w3-center">
-  <p class="w3-padding-16"><button class="w3-button w3-black" onclick="functionGrid()">Toggle Grid Padding</button></p>
-</div>
 </div>
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-light-grey w3-center w3-opacity w3-xlarge" style="margin-top:128px"> 
+  <div> 
+    <h6>
+      P.S. Ovviamente costruendo questo sito ho impiegato più tempo nei dettagli tecnici che in quest'ultima pagina di amore.. Scusa. <br />
+      Spero che tu non abbia avuto la stessa ricaduta professionale, altrimenti ora starai cercando di toglierti gli occhi per come era scritto il racconto. <br />
+      La scusa ufficiale è sempre: non ho avuto tempo per rileggerlo..
+    </h6>
+  </div>
   <i class="fa fa-facebook-official w3-hover-opacity"></i>
   <i class="fa fa-instagram w3-hover-opacity"></i>
   <i class="fa fa-snapchat w3-hover-opacity"></i>
@@ -164,6 +185,14 @@ function functionGrid() {
     }
 }
 
+function showTextF(id) {
+  var x = document.getElementById(id);
+  if (x.className.indexOf("w3-show") == -1) {
+    x.className += " w3-show";
+  } else { 
+     x.className = x.className.replace(" w3-show", "");
+  }
+}
 // Open and close sidebar
 function w3_open() {
     document.getElementById("mySidebar").style.width = "100%";
@@ -172,6 +201,12 @@ function w3_open() {
 
 function w3_close() {
     document.getElementById("mySidebar").style.display = "none";
+}
+
+// Visualizzazione foto
+function animatePhoto(element) {
+  document.getElementById("imgToShow").src = element.src;
+  document.getElementById("modalShow").style.display = "block";
 }
 </script>
 
