--- a/indizio/templates/indizio/fine.html
+++ b/indizio/templates/indizio/fine.html
@@ -44,9 +44,9 @@ img {margin-bottom: -7px}
       <p>
         <!-- Apro row -->
         <div class="w3-row">
-          <div class="w3-col w3-container" style="width:20%"></div>
+          <div class="w3-col w3-container l3 m2"></div>
           <!-- Apro mid coloumn -->
-          <div class="w3-col w3-container" style="width:60%">
+          <div class="w3-col w3-container l6 m8"> <!-- style="width:80%"> -->
           <h5>
             Dovevo essere sicuro che tu mi amassi quanto ti amo io, anche se non te lo dico mai. 
             E porca paletta, se hai avuto la pazienza di arrivare fin qui senza dire "Dani ma che è sta roba!?".. Dev'essere vero amore.<br />
@@ -63,7 +63,9 @@ img {margin-bottom: -7px}
             Dovevo dirti che sono più indeciso di Ceres coi suoi hobby, ma nonostante questo, tu sei una sicurezza.. è bello poter contare su di te. <br />
             Dovevo dirti che mi fai sentire un uomo, anche se sono ancora un ragazzino con qualche idea un po' cresciuta. <br />
             Dovevo dirti che ti amo tanto. <br />
+            Ti amo perché cosa non da poco, mi hai fatto provare un sacco di cose, indirettamente, con questo website! <br />
             Ti amo quando mi accompagni nei miei viaggi assurdi. <br />
+            Ti amo perché non mi prendi mai per pazzo, nemmeno se l'idea/hobby che perseguo è la più ridicola al mondo. <br />
             Ti amo quando ti arrabbi con me. <br />
             Ti amo quando mi richiami perchè sono un cazzaro, e quando stai con me lasciandomi cazzeggiare. <br />
             Fixed: Ti amo quando mi perdoni anche se il tuo regalo era più bello e homemade del mio. <br /><br />
