--- a/indizio/templates/indizio/start.html
+++ b/indizio/templates/indizio/start.html
@@ -1,15 +1,15 @@
 {% extends 'indizio/base.html' %}
 
 {% block title1 %}
-	Benvenuta
+	Benvenuta!
 {% endblock %}
 
 {% block content1_title %}
-	Questo è un sito dinamico
+	Questo è un sito dinamico, creato con e grazie al signor Django. 
 {% endblock content1_title %}
 
 {% block content1 %}
-	Creato con e grazie al signor Django.
+	Ma non ci perdiamo troppo nei particolari ora.. Who cares dei dettagli tecnici?
 {% endblock content1 %}
 
 {% block title2 %}
@@ -17,7 +17,10 @@
 {% endblock %}
 
 {% block content2_title %}
-	Un'racconto! Un opera narrativa vissuta da te, in prima persona, che ti divertirai (forse..) a dirigere.
+	Un'racconto! Un opera narrativa vissuta da te, in prima persona, che ti divertirai (forse..) a dirigere. <br />
+	Ebbene sì, nulla di nuovo, ho semplicemente rubato l'idea di 
+	<a href="https://duckduckgo.com/?q=lupo+solitario&t=lm&ia=web">Lupo Solitario</a>, noto scrittore di libri game.. <br />
+	E l'ho rimodernizzata un po' :)
 {% endblock content2_title %}
 
 {% block content2 %}
